2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/menu.php, include/db/oracle.php, include/db/mysql.php,
	include/functions_categories.php, include/functions_db.php,
	include/functions_menu.php: improved the code style.

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.wizard.php,
	godmode/reporting/reporting_builder.php,
	godmode/agentes/configurar_agente.php, godmode/menu.php,
	include/functions_ui.php, include/functions_agents.php,
	include/functions_alerts.php, include/functions_menu.php,
	include/functions_networkmap.php,
	include/help/en/help_alert_type.php,
	include/help/es/help_alert_type.php,
	include/functions_reporting.php,
	operation/agentes/alerts_status.functions.php,
	operation/agentes/alerts_status.php: erased the ocurrences about
	the deprecated alert compounds.
	
	Fixes: #3602487

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/help/en/help_alert_compound.php: delete old files for
	deprecated alert compounds.

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/alerts/alert_compounds.php,
	godmode/alerts/configure_alert_compound.php: delete old files for
	deprecated alert compounds.

2013-01-29 Miguel de Dios <miguel.dedios@artica.es>
	
	* general/shortcut_bar.php, godmode/alerts/alert_actions.php,
	godmode/category/edit_category.php, include/functions_reports.php,
	include/db/postgresql.php, include/functions_gis.php,
	include/functions_treeview.php,
	include/functions_network_components.php: improved the code style.
	
	* include/javascript/pandora.js: in function
	"agent_changed_by_multiple_agents" added hook for to call any
	function when loaded the module list. (now used in the wizzard
	of reports in enterprise).

2013-01-29  Sergio Martin <sergio.martin@artica.es>

	* include/functions_treeview.php
	operation/tree.php: Added module info table to the
	tree view and fix the hash of instances when is in
	metaconsole mode
